force-app/main/default/objects/ssot__Affiliation__dlm/ssot__Affiliation__dlm.object-meta.xml
<CustomObject>
    <mktDataModelAttributes>
        <creationType>Standard</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <isEnabled>false</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Related</objectCategory>
        <referenceEntityGroup>Individual Affiliation</referenceEntityGroup>
        <referenceEntityName>Affiliation</referenceEntityName>
        <referenceEntitySubjectArea>Individual Affiliation</referenceEntitySubjectArea>
    </mktDataModelAttributes>
</CustomObject>