force-app/main/default/objects/ssot__Affiliation__dlm/fields/ssot__AffiliatedTo__c.field-meta.xml
<CustomField>
    <fullName>ssot__AffiliatedTo__c</fullName>
    <label>Affiliated To</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AffiliatedTo</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>