force-app/main/default/objects/ssot__Affiliation__dlm/fields/ssot__AffiliationType__c.field-meta.xml
<CustomField>
    <fullName>ssot__AffiliationType__c</fullName>
    <label>Affiliation Type</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AffiliationType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>